Added deploy of js when something in js folder had been changed

--- a/.github/workflows/deploy-js.yml
+++ b/.github/workflows/deploy-js.yml
@@ -1,5 +1,8 @@
 name: Deploy JS Codestyle
-on: [push]
+on:
+  push:
+    paths:
+      - js/**
 jobs:
   Deploy-JS-Codestyle:
     runs-on: ubuntu-latest
