--- a/.github/workflows/deploy-js.yml
+++ b/.github/workflows/deploy-js.yml
@@ -17,10 +17,13 @@ jobs:
         with:
           node-version: '16'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@kaseya'
       - name: 'Install dependencies'
         working-directory: ${{ github.workspace }}/js
         run: npm ci
+      - run: ls
+      - run: cat /home/runner/work/_temp/.npmrc
+      - run: ls
+        working-directory: ${{ github.workspace }}/js
       - name: 'Publish package'
         working-directory: ${{ github.workspace }}/js
         run: npm publish
