--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,5 +11,12 @@
 		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/spanningcloudapps/codestyle</url>
+		</repository>
+	</distributionManagement>
 
 </project>
