--- a/.github/workflows/deploy-java.yml
+++ b/.github/workflows/deploy-java.yml
@@ -1,8 +1,6 @@
 name: Deploy Java Codestyle
 on:
   push:
-    branches:
-      - main
     paths:
       - java/**
 jobs:
@@ -17,8 +15,13 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Create build version
+        id: create_tag
+        uses: mcpierce/github-commit-timestamp-tagger@master
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Dversion=${{ steps.create_tag.outputs.tag_name }}
         working-directory: ${{ github.workspace }}/java
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
