--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,11 +4,12 @@
 
 	<groupId>com.kaseya</groupId>
 	<artifactId>static-analyzers</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${version}</version>
 
 	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<version>1.0-SNAPSHOT</version>
 	</properties>
 
 	<distributionManagement>
