--- a/.github/workflows/deploy-java.yml
+++ b/.github/workflows/deploy-java.yml
@@ -1,8 +1,6 @@
 name: Deploy Java Codestyle
 on:
   push:
-    branches:
-      - main
     paths:
       - java/**
 jobs:
@@ -17,8 +15,14 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Apply a tag to the new commit
+        id: create_tag
+        uses: mcpierce/github-commit-timestamp-tagger@master
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          base_version: "v0.5.0"
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Dversion=${{ steps.create_tag.outputs.tag_name }}
         working-directory: ${{ github.workspace }}/java
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
