--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ version: 2
 
 updates:
   - package-ecosystem: "maven"
-    directory: "/"
+    directory: "/java"
     schedule:
       interval: "weekly"
     target-branch: "main"
@@ -17,7 +17,7 @@ updates:
     open-pull-requests-limit: 1
 
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/js"
     schedule:
       interval: "weekly"
     target-branch: "main"
