--- a/.github/workflows/deploy-charp.yml
+++ b/.github/workflows/deploy-charp.yml
@@ -8,22 +8,37 @@ on:
       - csharp/**
 
 jobs:
-  pack-n-publish:
-    name: "Pack'n'Publish"
+  pack-n-push:
+    name: "Pack'n'Push"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Parse BUILD_VERSION from tag name
-        run: echo "BUILD_VERSION=${GITHUB_REF/refs\/tags\/csharp_/}" >> $GITHUB_ENV
+      - name: Fetch tags
+        shell: bash
+        run: git fetch --tags
+
+      - name: Increment Patch version
+        shell: bash
+        run: |
+          last_version=$(\
+            (ls .git/refs/tags/ --almost-all --format single-column -1 2>/dev/null | grep . || echo "csharp_0") \
+              | grep ^csharp_ \
+              | egrep -o [0-9]+ \
+              | tail -n 1 \
+            )
+          new_version=$(expr $last_version + 1)
+          git tag csharp_$new_version
+          git push --tags
+          echo "PATCH_VERSION=$new_version" >> $GITHUB_ENV
 
       - name: Pack
         run: |
           for csproj in ./csharp/*/*.csproj
-          do
+          do 
             dotnet pack $csproj \
-              -p:BuildVersion=$BUILD_VERSION \
+              -p:PatchVersion=$PATCH_VERSION \
               --verbosity detailed \
               --nologo \
               --configuration Release \
