--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -1,123 +1,69 @@
-#  ------------------------- Metrics ------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_metrics.md
+require:
+ - rubocop-performance
+ - rubocop-rspec
+
+AllCops:
+  TargetRubyVersion: 2.5
+  NewCops: enable
+  Exclude:
+    - 'spec/dummy/bin/*'
+    - '*.md'
+
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
 
 Metrics/BlockLength:
+  Max: 36
   Exclude:
-    - 'spec/**/*.rb'
-    - 'config/**/*.rb'
-    - 'lib/tasks/**/*.rake'
+    - spec/**/*.rb
+    - lokalise_rails.gemspec
 
-# The guiding principle of classes is SRP, SRP can't be accurately measured by LoC
-Metrics/ClassLength:
-  Max: 200
+Metrics/BlockNesting:
+  Max: 2
 
-# Commonly used screens these days easily fit more than 80 characters.
-Metrics/LineLength:
-  Max: 120
-
-# Shorter methods lead to extraction of single-use methods, which can make
-# the code easier to read (by naming things).
-Metrics/MethodLength:
-  Max: 20
-
-#  ------------------------- Layout -------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_layout.md
-
-Layout/DotPosition:
-  EnforcedStyle: trailing
-
-Layout/FirstArrayElementLineBreak:
-  Enabled: true
-
-Layout/FirstHashElementLineBreak:
-  Enabled: true
-
-Layout/FirstMethodArgumentLineBreak:
-  Enabled: true
-
-Layout/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: space
-
-#  -------------------------- Lint --------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_lint.md
-
-Lint/AssignmentInCondition:
-  AllowSafeAssignment: false
-
-#  -------------------------- Naming ------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_naming.md
-
-Naming/MemoizedInstanceVariableName:
-  EnforcedStyleForLeadingUnderscores: optional
-
-#  -------------------------- Rails -------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_rails.md
-
-Rails:
-  Enabled: true
-
-Rails/ActiveRecordAliases:
+RSpec/DescribeClass:
   Enabled: false
 
-#  -------------------------- Style -------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_style.md
+Layout/LineLength:
+  AllowURI: true
+  Exclude:
+    - lib/generators/templates/lokalise_rails_config.rb
 
-Style/Alias:
-  EnforcedStyle: prefer_alias_method
+Metrics/MethodLength:
+  CountComments: false
+  Max: 15
+
+Metrics/ModuleLength:
+  Max: 120
+
+Metrics/ClassLength:
+  Max: 120
+
+Metrics/ParameterLists:
+  Max: 5
+  CountKeywordArgs: true
 
 Style/CollectionMethods:
   Enabled: true
   PreferredMethods:
-    # inject seems more common in the community.
-    reduce: "inject"
-    collect: "map"
-    detect: 'detect'
+    collect:  'map'
+    collect!: 'map!'
+    inject:   'reduce'
+    find:     'detect'
+    find_all: 'select'
+    delete:   'gsub'
 
-# This cop is not smart enough to differentiate between a multi-line conditional
-# and a ternary, so it's pretty useless since those two should be different use cases
-Style/ConditionalAssignment:
+Layout/DotPosition:
+  EnforcedStyle: trailing
+
+RSpec/MultipleExpectations:
+  Max: 30
+
+RSpec/ExampleLength:
+  Max: 35
+
+RSpec/FilePath:
   Enabled: false
 
-Style/Documentation:
-  Enabled: false
-
-Style/DoubleNegation:
-  Enabled: false
-
-Style/EmptyLiteral:
-  Enabled: false
-
-# When all keys are symbols, do not use hash rockets. Otherwise do not mix styles.
-Style/HashSyntax:
-  EnforcedStyle: ruby19_no_mixed_keys
-
-Style/MethodCalledOnDoEndBlock:
-  Enabled: true
-
-# Either allow this style or don't. Marking it as safe with parenthesis
-# is silly. Let's try to live without them for now.
-Style/ParenthesesAroundCondition:
-  AllowSafeAssignment: false
-
-Style/RaiseArgs:
-  EnforcedStyle: compact
-
-Style/RedundantSelf:
-  Enabled: false
-
-Style/StringLiterals:
-  Enabled: false
-
-# Even though I think the use of %i[something something_else] is good,
-# I think [:something, :something_else] is equally valid
-Style/SymbolArray:
-  Enabled: false
-
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: consistent_comma
-
-Style/TrailingCommaInHashLiteral:
-  EnforcedStyleForMultiline: consistent_comma
-
-Style/TrailingCommaInArrayLiteral:
-  EnforcedStyleForMultiline: consistent_comma
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
