--- a/ruby/ci/.rubocop.yml
+++ b/ruby/ci/.rubocop.yml
@@ -13,7 +13,7 @@ AllCops:
 #  ------------------------- Metrics ------------------------
 # https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_metrics.md
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
   Exclude:
     - '../db/migrate/201*.rb'
@@ -22,10 +22,10 @@ Metrics/LineLength:
 #  ------------------------- Layout -------------------------
 # https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_layout.md
 
-Layout/AlignHash:
+Layout/HashAlignment:
   Enabled: true
 
-Layout/AlignParameters:
+Layout/ParameterAlignment:
   EnforcedStyle: with_first_parameter
 
 Layout/ClosingParenthesisIndentation:
@@ -70,13 +70,13 @@ Layout/FirstParameterIndentation:
 Layout/IndentationConsistency:
   EnforcedStyle: normal
 
-Layout/IndentArray:
+Layout/FirstArrayElementIndentation:
   Enabled: true
 
 Layout/IndentationWidth:
   Enabled: true
 
-Layout/IndentHash:
+Layout/FirstHashElementIndentation:
   Enabled: true
 
 Layout/MultilineArrayBraceLayout:
@@ -142,11 +142,15 @@ Layout/SpaceInsideParens:
 Layout/TrailingWhitespace:
   Enabled: true
 
-Layout/TrailingBlankLines:
+Layout/TrailingEmptyLines:
   Enabled: true
 
 #  -------------------------- Lint --------------------------
 # https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_lint.md
+
+Lint/AssignmentInCondition:
+  AllowSafeAssignment: false
+
 Lint/Debugger:
   Enabled: true
 
@@ -162,7 +166,7 @@ Lint/DeprecatedClassMethods:
 #  -------------------------- Naming ------------------------
 # https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_naming.md
 
-Naming/UncommunicativeMethodParamName:
+Naming/MethodParameterName:
   Enabled: true
 
 Naming/MemoizedInstanceVariableName:
@@ -171,37 +175,41 @@ Naming/MemoizedInstanceVariableName:
 Naming/MethodName:
   EnforcedStyle: snake_case
 
-#  -------------------------- Rails -------------------------
-# https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_rails.md
-
-Rails:
-  Enabled: true
-  Exclude:
-    - '../config/deploy.rb'
-
-Rails/Blank:
-  Enabled: true
-  UnlessPresent: true
-  NotPresent: true
-  NilOrEmpty: true
-
-Rails/Present:
-  Enabled: true
-
-Rails/Presence:
-  Enabled: true
-
-Rails/TimeZone:
-  Enabled: true
-
 #  -------------------------- Style -------------------------
 # https://github.com/rubocop-hq/rubocop/blob/v0.63.1/manual/cops_style.md
 
+Style/Alias:
+  EnforcedStyle: prefer_alias_method
+
+Style/SymbolArray:
+  Enabled: false
+
+Style/ConditionalAssignment:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/DoubleNegation:
+  Enabled: false
+
+Style/EmptyLiteral:
+  Enabled: false
+
+Style/ParenthesesAroundCondition:
+  AllowSafeAssignment: false
+
+Style/RaiseArgs:
+  EnforcedStyle: compact
+
+Style/RedundantSelf:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
 Style/BlockDelimiters:
   EnforcedStyle: line_count_based
-
-Style/BracesAroundHashParameters:
-  Enabled: true
 
 Style/CollectionMethods:
   PreferredMethods:
@@ -218,6 +226,7 @@ Style/GuardClause:
     - '../db/migrate/201*.rb'
     - '../db/migrate/2020*.rb'
 
+# When all keys are symbols, do not use hash rockets. Otherwise do not mix styles.
 Style/HashSyntax:
   EnforcedStyle: ruby19_no_mixed_keys
 
@@ -278,5 +287,5 @@ Style/TrailingCommaInArrayLiteral:
 Style/UnlessElse:
   Enabled: true
 
-Style/UnneededInterpolation:
+Style/RedundantInterpolation:
   Enabled: true
