Add bundle install

--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -33,6 +33,7 @@ jobs:
         shell: bash
         run: |
           cd ruby/
+          bundle install
           bundle exec rubocop
       - name: Run Tests
         shell: bash
