--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -13,8 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        ruby: ["2.2", "2.7", "3.0", "3.1"]
+        os: [macos-latest, ubuntu-16, windows-latest]
+        ruby: ["2.3", "2.7", "3.0", "3.1"]
 
     runs-on: ${{ matrix.os }}
 
