--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-16, windows-latest]
-        ruby: ["2.3", "2.7", "3.0", "3.1"]
+        ruby: ["2.5", "2.7", "3.0", "3.1"]
 
     runs-on: ${{ matrix.os }}
 
@@ -34,9 +34,9 @@ jobs:
         shell: bash
         run: |
           cd ruby/
-          bundle exec rubocop
+          bundle _2.3.7_ exec rubocop
       - name: Run Tests
         shell: bash
         run: |
           cd ruby/
-          bundle exec rake
+          bundle _2.3.7_ exec rake
