--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -35,7 +35,7 @@ jobs:
         shell: bash
         run: |
           cd ruby/
-          bundle _2.3.7_ exec rubocop -c .rubocop.yml -d --force-exclusion
+          bundle _2.3.7_ exec rubocop -c .rubocop.yml --force-exclusion
       - name: Run Tests
         shell: bash
         run: |
