--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -1,10 +1,11 @@
 # frozen_string_literal: true
 
-require 'rake'
-require 'rubocop/rake_task'
+require "bundler/gem_tasks"
+require "rubocop/rake_task"
+#require "rspec/core/rake_task"
 
-RuboCop::RakeTask.new do |task|
-  task.requires << 'rubocop-performance'
-  task.requires << 'rubocop-rspec'
-  task.requires << 'rubocop-rake'
-end
+#RSpec::Core::RakeTask.new(:spec)
+
+RuboCop::RakeTask.new
+
+task default: %i[rubocop]
