--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           working-directory: ${{ github.workspace }}/ruby
           ruby-version: ${{ matrix.ruby }}
+          run: gem install bundler
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run RuboCop
         working-directory: ${{ github.workspace }}/ruby
