--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -24,13 +24,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
-        run: gem install bundler
         with:
           working-directory: ${{ github.workspace }}/ruby
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          #bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install 
       - name: Run RuboCop
         working-directory: ${{ github.workspace }}/ruby
         run: |
