--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -31,6 +31,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           #bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Install dependencies
+        working-directory: ${{ github.workspace }}/ruby
         run: |
           gem install bundler
           bundle install 
