--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-16, windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         ruby: ["2.5", "2.7", "3.0", "3.1"]
 
     runs-on: ${{ matrix.os }}
