--- a/csharp/.gitignore
+++ b/csharp/.gitignore
@@ -30,6 +30,9 @@ x64/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 
+# Gemfile Lock
+Gemfile.lock
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
