--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        ruby: ["2.2.10", "2.3.1"]
+        ruby: ["2.3.1"]
 
     runs-on: ${{ matrix.os }}
 
