--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        ruby: ["2.3.1"]
+        ruby: ["2.5", "2.7", "3.0", "3.1"]
 
     runs-on: ${{ matrix.os }}
 
@@ -32,7 +32,8 @@ jobs:
       - name: Install dependencies
         working-directory: ${{ github.workspace }}/ruby
         run: |
-          bundle _1.17.3_ install
+          gem install bundler
+          bundle install
       - name: Run Tests
         working-directory: ${{ github.workspace }}/ruby
         run: | # add more tests as necessary in rake file. Make sure they pass before PR
