--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        ruby: ["2.5", "2.7", "3.0", "3.1"]
+        ruby: ["2.4", "2.7", "3.0"]
 
     runs-on: ${{ matrix.os }}
 
