--- a/.github/workflows/deploy-ruby.yml
+++ b/.github/workflows/deploy-ruby.yml
@@ -13,8 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-16, windows-latest]
-        ruby: ["2.5", "2.7", "3.0", "3.1"]
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        ruby: ["2.4", "2.7", "3.0"]
 
     runs-on: ${{ matrix.os }}
 
@@ -24,20 +24,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
-          bundler: 2.3.7
           working-directory: ${{ github.workspace }}/ruby
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - name: Run RuboCop
-        shell: bash
+      - name: Install dependencies
+        working-directory: ${{ github.workspace }}/ruby
         run: |
-          cd ruby/
-          bundle _2.3.7_ exec rubocop -c .rubocop.yml --force-exclusion --require rubocop-rake
+          gem install bundler
+          bundle install
       - name: Run Tests
-        shell: bash
-        run: | # add more tests as necessary below rake rubocop. Make sure they pass before PR
-          cd ruby/
-          bundle _2.3.7_ exec rake rubocop
+        working-directory: ${{ github.workspace }}/ruby
+        run: | # add more tests as necessary in rake file. Make sure they pass before PR
+          bundle exec rake
